add command history
